[tool.poetry]
name = "ictransport test case"
version = "0.1.0"
description = ""
authors = ["lastway <lastway90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.4"
aiohttp = "^3.8.4"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.12"
dataclass-factory = "^2.16"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
orjson = "^3.8.11"
uvloop = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
